# vector-protocol

./: .env.docker  .env.example  .gitignore  .gitmodules  ACOMPANHAMENTO_README.md  AGENTS.md  ARQUIVOS_PRIORITARIOS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  IMPROVEMENTS_IMPLEMENTED.md  MONITORING_SETUP.md  MONITOR_LOG.txt  PRODUCTION_DEPLOYMENT_PLAN.md  PRODUCTION_FULL_ROLLOUT.md  README.md  TESTNET_READY.md  TESTNET_SUMMARY.txt  VALIDATION_REPORT_2026-01-06.md  all_tests_output.txt  bottelegram.txt  check_orders.py  docker-compose.yml  fix_orders.py  implementation_plan.md  open_bananausdt.py  open_position.py  open_three_positions.py  project-knowledge.md  pyproject.toml  pytest.ini  quantbrasil_ativos.html  supervisor.py  temp_runner.py  test_output.txt
.ai/: agent-guidelines.md  context-map.md  focus-modules.md  safety-profile.md  tasks-playbook.md
.claude/: settings.local.json
backend/: Dockerfile  debug_order_types.py  migrate_database.py  monitor.py  open_bananausdt.py  open_three_positions.py  open_two_positions_safe.py  requirements.txt  smart_monitor.sh
docs/: ADAPTIVE_INTELLIGENCE_ENGINE.md  ADVANCED_TRADING_STRATEGIES.md  AI-CONTRIBUTION.md  API_SPEC.md  ARCHITECTURE.md  CAPITAL_MANAGEMENT.md  CHANGE-MAP.md  CHANGELOG.md  CONTRIBUTING.md  DATABASE_CONFIG.md  DEPLOYMENT.md  EXECUTION_ENGINE_OPTIMIZATION.md  FRONTEND_PLAN.md  GOVERNANCE.md  LOGGING.md  MARKET_INTELLIGENCE.md  ORGANIZATION_REPORT.md  PR1_BASELINE_VALIDATION_LOGS.md  PR1_IMPLEMENTATION_SUMMARY.md  RUNBOOK.md  TELEGRAM_GUIDE.md  TESTNET_VALIDATION_GUIDE.md  USER_CONTROL_VISIBILITY.md  VALIDATIONS.md  VERSIONING.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  (+1 more)
(+229 files in other folders)
